# so2-fda-tome

./: Makefile  Makefile.in  README.md  config.status  configure.ac  configure~  libtool  sysegconf.m4
autom4te.cache/: output.0  output.2  output.3  traces.0  traces.1  traces.2
doc/: syseg.md
eg/: Makefile  Makefile.am  Makefile.in  README
eg/abi/: Makefile  Makefile.m4  README  eg-13-bug.S  eg-13.S
eg/bl/: Makefile.m4  README  README.m4  bios1.S  bios1.h  bios2.S  boot.ld  kernel.c  kernel.h  klib.c  klib.h  rt0.S  stage1.c
eg/crt/: Makefile  Makefile.m4  README
eg/fat/: Makefile  Makefile.m4  README  README.m4  fat.h  fat12.h  fatinfo.c  mbrinfo.c  mbs.S  mkfat12-beta.c  mkfat12.c
eg/hw/: Makefile  Makefile.m4  README
eg/make/: README  circle.h
eg/posix/: Makefile  Makefile.m4  README  exec.c  fork-01.c  fork.c  getpid.c  pipeline.c
eg/real/: Makefile  Makefile.m4  README  eg-00.S  eg-03.h  eg-03_utils.c  mbr.ld  rt0.S  rt0.ld
eg/rop/: Makefile  Makefile.m4  README  README.m4  eg-04.c  eg-09.S  eg-09.sh
eg/run/: Makefile  Makefile.m4  README  eg-02a.c  eg-02b.c
eg/tydos/: Makefile  bios1.h  kernel.c  libtydos.c  logo.c  prog.ld  syscall.c  tydos.h  tydos.ld
eg/tyfs/: Makefile  Makefile.m4  README
eg/tyos/: Makefile  Makefile.m4  README
eg/tyos32/: Makefile  Makefile.m4  README
extra/: Makefile  Makefile.in  README
extra/make/: README
replace/: Makefile  Makefile.in  README
test/: Makefile  Makefile.in  README
tools/: Makefile  Makefile.in  bin2hex  cpimg  debug.h  hex2bin  syseg-newfile
try/: Makefile  Makefile.am  Makefile.in
try/bcmd/: Makefile
try/hack01/: Makefile  README
try/hw/: Makefile
try/imf/: Makefile
try/mydos/: Makefile  README  crt0.S  hello.c  libtydos.h
try/tyos/: Makefile  README
(+4 files in other folders)
